# toy-outfit-generator

./: .env.example  .gitignore  INSTALL.md  README.md  SKILL.md  install-online.sh  install.sh  skills-lock.json  toy_outfit_generator.py
.agents/skills/toy-outfit-generator/: INSTALL.md  SKILL.md  install-online.sh  pyproject.toml
.agents/skills/toy-outfit-generator/.github/workflows/: release.yml
.agents/skills/toy-outfit-generator/docs/: usage.md
.agents/skills/toy-outfit-generator/src/: __init__.py  toy_outfit_generator.py
examples/: quickstart.sh
release/: toy_outfit_generator.py
src/: toy_outfit_generator.py
