[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-outfit-generator"
version = "3.1.0"
description = "潮玩穿搭图生成工具 - 专为潮玩博主设计的通用穿搭图生成工具"
requires-python = ">=3.8"
authors = [
  { name = "78design" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["toy", "outfit", "generator", "ai", "image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/78design/toy-outfit-generator"
Repository = "https://github.com/78design/toy-outfit-generator"
Issues = "https://github.com/78design/toy-outfit-generator/issues"

[project.scripts]
toy-outfit-generator = "toy_outfit_generator:main"
toy-outfit = "toy_outfit_generator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
" = "src"
